# sch-creator

./: .clang-format-common.sh  .cmake-format-check.sh  .cmake-format-common.sh  .cmake-format-fix.sh  .cmake-format.yaml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Main.cpp  README.md  SmoothHullGeneratorVVR.cpp  SmoothHullGeneratorVVR.h  vector3.h
examples/: Cube.ptc
examples/cloud/: cube2x2.cloud  icosahedron.cloud  poly.cloud  s2x2.cloud
examples/sch/: cube2x2.txt  s2x2.txt
examples/wrl/: L.wrl  barre.wrl  cube2x2.wrl  s2x2.wrl
include/sch-creator/: config.h.in  sch-creator-2d.h  sch-creator-3d.h
script/: CMakeLists.txt  blender_2cloud.py  blender_2cloud.sh  blender_obj2cloud.py  blender_obj2cloud.sh  blender_vrml2cloud.py  blender_vrml2cloud.sh  blender_vrml2cloud_decimate.py  blender_vrml2cloud_decimate.sh  cloud2STPBV.sh  cloud2qhull.sh  cloud2qhull.sh.in  cloud2sch.sh.in  vrml2STPBV.sh  vrml2cloud.py  vrml2qconvexinput.py  vrml2qhull.sh  vrml2qhull.sh.in  vrml2sch.sh.in
script/blender/io_qconvex/: __init__.py  export_qc.py
src/: CMakeLists.txt  SmoothHullGeneratorVVR.cpp  sch-creator-2d.cpp  sch-creator-3d.cpp  sch-creator.cpp  sch-visualizer.py  supportCheck.cpp
